menu: complete makeover functionality complete css based in L/normal view minimized js usage in S view visibility of mobile menu (S view) still managed in js because of the problem, that braekpoints of css don't have the same value as in js //=> to avoid bugs
decoration pics changed

Nav sort fixed (again and for good)

--- a/public/css/realCss/menu/menu.css
+++ b/public/css/realCss/menu/menu.css
@@ -1,153 +1,139 @@
 /* -----------------Navbar CSS settings----------------- */
-/******* GENERAL *********/
-.navigation
-{
-    list-style-type: none;
-    margin: 0 0 0 0;
-    display: block;
-    width: 100%;
-}
-.level_0
-{
-    float: left;
-    display: block;
-}
-#navframe li
-{
-    min-width: 130px;
-    z-index: 100;
-}
-/******* L-View *********/
-
-.menuItems li
-{
-    height: 30px;
-    background-color: #FAEBd7;
-    z-index: 5;
-    overflow-x: hidden;
-    overflow-y: visible;
-    background-size: auto 10px;
-    background-image: url(/img/uikit/decoration.3l.png);
-    background-repeat: repeat-x;
-    background-position: bottom left;
-}
-.menuItems .level_0 li {
-    background-image: url(/img/uikit/decoration.3l.png);
-    background-size: auto 10px;
-    background-repeat: repeat-x;
-    background-position: bottom left;
-    display: none;
-}
-.menuItems li:active,
-.menuItems li:hover
-{
-    background-image: url(/img/uikit/highlight.u.d.png), url(/img/uikit/decoration.3line_active.png);
-    background-size: 100% auto, auto 10px;
-    background-repeat: no-repeat, repeat-x;
-    background-position: top, bottom left;
-    background-color: #D2B48C;
-
-}
-.menuItems li:active,
-.menuItems .level_0:active li,
-.menuItems .level_0:hover  li
-{
-    position: relative;
-    display: block;
-    background-color: #D2B48C;
-}
-
-.menuItems .level_0:active ul,
-.menuItems .level_0:hover  ul
-{
-    margin-top: 11px;
-    position: absolute;
-    background-color: #D2B48C;
-}
-.navtitel{
-    height : 40px;
-    background-size: auto 10px;
-    background-image: url(/img/uikit/decoration.3l.png);
-    background-repeat: repeat-x;
-    background-position: bottom left;
-}
-.navigation-background {
-    width: 100%;
-    height: 30px;
-    background-color: #FAEBd7;
-    z-index: 5;
-    overflow-x: hidden;
-    overflow-y: visible;
-    background-size: auto 10px;
-    background-image: url(/img/uikit/decoration.3l.png);
-    background-repeat: repeat-x;
-    background-position: bottom left;
-}
-
-/******* S-View *********/
-/** ------------------------------ the navbutton --------------------------**/
-.navbutton {
-    display: block;
-    width: auto;
+#navframe {
+    z-index: 10;
     padding: 0;
-    height: 65px;
-    background-image: url(/img/uikit/decoration.3l.png);
-    background-size: auto 10px;
-    background-repeat: repeat-x;
-    background-position: bottom left;
+    margin: 0;
 }
-.menu_closed {
+
+/* **** mobile button **** */
+.menu_button_div {
+    text-align: center;
+}
+.menu_button_img {
+    padding: 2px;
     height: 50px;
 }
 
-.links {
-     height: 15px;
- }
-.mobile_menuItems .level_0 ul {
-    margin-top: 11px;
-    margin-left: -1px;
-    height: auto;
-    width: 130px;
+/* **** menu titel **** */
+.menu_titel {
+    text-align: center;
+    height: 45px;
+    background-size: auto 30px;
+    background-image: url(/img/uikit/decoration.3line.png);
+    background-repeat: repeat-x;
+    background-position: bottom left;
 }
-.mobile_menuItems li
-{
-    position: inherit;
+/* **** the menu **** */
+.menu_items{
+    text-align: left;
+}
+.topics{
+    position: relative;
+}
+/* first level ul */
+.navigation {
+    background-color: #FAEBd7;
+    background-size: auto 30px;
+    background-image: url(/img/uikit/decoration.3line.png);
+    background-repeat: repeat;
+
+}
+/* first level li */
+.level_0 {
+    position: relative;
     display: inline-block;
-    height: auto !important;
+    width: 130px;
+    text-align: center;
+    padding-bottom: 11px;
+    background-size: auto 30px;
+    background-image: url(/img/uikit/decoration.3line.png);
+    background-repeat: repeat;
 }
-.mobile_menuItems li a{
-    text-decoration: underline;
-}
-.mobile_menuItems .level_0:hover{
-    background-color: #ff5500;
-}
-.mobile_menuItems .topics {
-    height: 600px;
-    background-image: url(/img/uikit/decoration.3l.png) !important;
-    background-size: auto 10px !important;
-    background-repeat: repeat-x !important;
-    background-position: bottom left !important;
-}
-.mobile_menuItems .level_0{
-    border: dotted;
-    border-width: thin;
-    border-bottom: none;
+.level_0>ul{
+    margin-top: 10px;
+    position:absolute;
+    width: 100%;
     background-color: #D2B48C;
-    margin-bottom: 3px;
+    display: none;
+}
+.level_0 li{
+    display: block;
+    width: 100%;
+    padding-bottom: 11px;
+    background-size: auto 30px;
+    background-image: url(/img/uikit/decoration.3line.png);
+    background-repeat: repeat;
+}
+.level_0:hover,
+.level_0:active,
+.level_0 li:hover{
+    background-color: #D2B48C;
+    background-size: auto 30px;
+    background-image: url(/img/uikit/decoration.3line_active.png);
+    background-repeat: repeat-x;
+    background-position: bottom left;
+}
+.level_0:hover>ul,
+.level_0:active>ul{
+    display:block;
 }
 
+/* **** the link images **** */
+.links{
+    height: 15px;
+}
+
+
+@media only screen and (max-width: 700px ){
+    #navframe {
+        z-index: 10;
+        padding: 0;
+        margin: 0;
+        text-align: left;
+    }
+    /* **** the menu **** */
+        .topics {
+        position: relative;
+    }
+    /* first level ul */
+    .navigation {
+        background: none;
+    }
+    /* first level li */
+    .level_0 {
+        background-color: #D2B48C;
+        margin-top: 3px;
+    }
+    .level_0>ul {
+        position:relative;
+        display: block;
+    }
+
+    .level_0:hover,
+    .level_0:active,
+    .level_0 li:hover{
+        background-position: top left;
+    }
+    .animation {
+         display: block !important;
+
+         -webkit-animation: fadeInFromNone 1.0s ease-out;
+         -moz-animation: fadeInFromNone 1.0s ease-out;
+         -o-animation: fadeInFromNone 1.0s ease-out;
+         animation: fadeInFromNone 1.0s ease-out;
+     }
+}
 
 /* ---------------------------- animations -> css_actions.css -------------------------------- */
+@media only screen and (min-width: 700px ) {
+    .level_0:hover > ul {
+        display: block !important;
 
-.menuItems .level_0_animated:hover ul,
-.mobile_menuItems .level_0_animated
-{
-    display: block !important;
-
-    -webkit-animation: fadeInFromNone 1.0s ease-out;
-    -moz-animation: fadeInFromNone 1.0s ease-out;
-    -o-animation: fadeInFromNone 1.0s ease-out;
-    animation: fadeInFromNone 1.0s ease-out;
+        -webkit-animation: fadeInFromNone 0.7s ease-out;
+        -moz-animation: fadeInFromNone 0.7s ease-out;
+        -o-animation: fadeInFromNone 0.7s ease-out;
+        animation: fadeInFromNone 0.7s ease-out;
+    }
 }
 
 a:hover>img
