--- a/public/css/realCss/siteDesign/standards.css
+++ b/public/css/realCss/siteDesign/standards.css
@@ -4,7 +4,7 @@
     background-color: #D2B48C;
 }
 .dekorators{
-    background-image: url(/img/uikit/decoration.3l.png);
+    background-image: url(/img/uikit/decoration.3line.png);
     background-size: auto 10px;
     background-repeat: repeat-x;
     background-position: bottom left;
